# util_geometry_msgs

./: CMakeLists.txt  README.md  dependencies.rosinstall  package.xml
include/util_geometry_msgs/: util_geometry_msgs.hpp
src/: util_geometry_msgs.cpp
test/: test_util_geometry_msgs_checks.cpp  test_util_geometry_msgs_computations.cpp  test_util_geometry_msgs_conversions.cpp  test_util_geometry_msgs_transformations.cpp
